<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:ignore="ContentDescription, LabelFor">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/data_page2_title1"
            android:textColor="@color/colorTextHeading"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        <com.github.mikephil.charting.charts.LineChart
            android:contentDescription="@string/data_page2_chart1_description"
            
            android:id="@+id/data_page2_chart1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/data_page2_chart"
            android:minHeight="300dp">
        
        </com.github.mikephil.charting.charts.LineChart>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data_page2_k1"
                android:textColor="@color/colorRed"
                android:textSize="14sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/data_page2_k2"
                android:textColor="@color/colorTextNormal"
                android:textSize="14sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/data_page2_k3"
                android:textColor="@color/colorBlue"
                android:textSize="14sp" />
        </LinearLayout>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorDividers" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:text="@string/data_page2_title2"
            android:textColor="@color/colorTextHeading"
            android:textSize="14sp"
            android:textStyle="bold" />
        
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/data_page2_chart2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/data_page2_chart"
            android:minHeight="300dp">
        
        </com.github.mikephil.charting.charts.LineChart>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/data_page2_k1"
                android:textColor="@color/colorRed"
                android:textSize="14sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/data_page2_k2"
                android:textColor="@color/colorTextNormal"
                android:textSize="14sp" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/data_page2_k3"
                android:textColor="@color/colorBlue"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>