<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        
        <variable
            name="tableData"
            type="com.likianta.cpea.TableData" />
    </data>
    
    <ScrollView xmlns:bind="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:fillViewport="true"
        tools:ignore="ContentDescription, LabelFor">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            
            <!-- Table Title -->
            <TextView
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/table_title"
                style="@style/MyTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/table_title"
                android:layout_marginTop="20dp"
                android:divider="@drawable/data_page1_table_divider1"
                android:showDividers="beginning|middle|end"
                android:stretchColumns="0,1">
                
                <TableRow
                    android:background="@color/colorBackgroundLight"
                    android:divider="@drawable/data_page1_table_divider2"
                    android:showDividers="beginning|middle|end">
                    
                    <TextView
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/data_page1_x"
                        android:textColor="@color/colorTextNormal"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    
                    <TextView
                        android:layout_height="match_parent"
                        android:id="@+id/value_label"
                        android:gravity="center"
                        android:textColor="@color/colorTextNormal"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </TableRow>
                
                <include
                    android:id="@+id/row0"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row1"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row2"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row3"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row4"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row5"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row6"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row7"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row8"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row9"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row10"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row11"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
                
                <include
                    android:id="@+id/row12"
                    layout="@layout/data_page1_unit"
                    bind:cell="@{tableData}" />
            </TableLayout>
            
            <!-- Divide line in the end of table -->
            
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/table_layout"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/table_layout"
                android:background="@color/colorDividers" />
            
            <!-- Background of statusValues cells -->
            
            <ImageView
                android:id="@+id/status1_bg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignTop="@+id/table_layout"
                android:layout_toStartOf="@+id/table_layout"
                android:background="@drawable/data_page1_cell_bg_gray" />
            
            <ImageView
                android:id="@+id/status2_bg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/status1_bg"
                android:layout_toStartOf="@+id/table_layout"
                android:background="@drawable/data_page1_cell_bg_white" />
            
            <ImageView
                android:id="@+id/status3_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/table_layout"
                android:layout_below="@+id/status2_bg"
                android:layout_toStartOf="@+id/table_layout"
                android:background="@drawable/data_page1_cell_bg_gray" />
            
            <!-- Status Buttons -->
            <TextView
                android:id="@+id/table_label"
                style="@style/MyTextTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignEnd="@+id/status1_bg"
                android:layout_alignTop="@+id/status1_bg" />
            
            <Button
                android:id="@+id/table_switch"
                style="@style/MyTextButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignEnd="@+id/status1_bg"
                android:layout_below="@+id/table_label"
                android:layout_margin="20dp"
                android:text="@string/data_page1_switch_table" />
            
            <!-- Selector Buttons -->
            <TextView
                android:id="@+id/selector1"
                style="@style/MyTextButton"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_alignTop="@+id/status2_bg"
                android:layout_marginTop="20dp"
                android:text="@string/data_page1_k1" />
            
            <TextView
                android:id="@+id/selector2"
                style="@style/MyTextButton"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_below="@+id/selector1"
                android:layout_marginTop="10dp"
                android:text="@string/data_page1_k2" />
            
            <TextView
                android:id="@+id/selector3"
                style="@style/MyTextButton"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_below="@+id/selector2"
                android:layout_marginTop="10dp"
                android:text="@string/data_page1_k3" />
            
            <!-- Status EditText -->
            <TextView
                android:id="@+id/status_label"
                style="@style/MyTextTitle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignEnd="@+id/status1_bg"
                android:layout_alignTop="@+id/status3_bg"
                android:text="@string/data_page1_status_label" />
            
            <EditText
                android:id="@+id/status1"
                style="@style/MyTextStatusEdit"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_below="@+id/status_label"
                android:hint="@string/data_page1_status_r" />
            
            <EditText
                android:id="@+id/status2"
                style="@style/MyTextStatusEdit"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_below="@+id/status1"
                android:hint="@string/data_page1_status_r0" />
            
            <EditText
                android:id="@+id/status3"
                style="@style/MyTextStatusEdit"
                android:layout_alignEnd="@+id/status2_bg"
                android:layout_below="@+id/status2"
                android:hint="@string/data_page1_status_u0" />
        
        </RelativeLayout>
    </ScrollView>
</layout>